--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also use other style files */
-@use './assets/styles.scss';
+@import url('./assets/styles.scss'); 
 
 html {
     font-size: 14px;
