--- a/src/app/expense-list/expense-list.component.html
+++ b/src/app/expense-list/expense-list.component.html
@@ -1,3 +1,4 @@
+<app-topbar></app-topbar>
 <div class="card">
     <div class="p-toolbar mb-4 gap-2 flex justify-content-between align-items-center">
         <div class="flex align-items-center gap-2">
