--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
     <!-- Right Side Controls -->
     <div class="actions">
         <button class="icon-btn" (click)="toggleTheme()">
-            <span *ngIf="!isDark()">🌞</span>
+            <span *ngIf="isDark()">🌞</span>
             <span *ngIf="isDark()">🌙</span>
         </button>
 
