--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,18 @@
 
 <!-- Logo -->
-<header class="topbar">
+<!-- <header class="topbar">
     <div class="left-section">
         <img src="assets/logo.png" class="logo" alt="Logo" />
     </div>
 
 
-    <!-- Center Navigation -->
+
     <nav class="navigation">
         <button class="nav-btn" routerLink="dashboard">Dashboard</button>
         <button class="nav-btn" routerLink="expense-list">Expenses List</button>
     </nav>
 
-
-    <!-- Right Side Controls -->
-    <div class="actions">
+   <div class="actions">
         <button class="icon-btn" (click)="toggleTheme()">
             <span *ngIf="isDark()">🌞</span>
             <span *ngIf="isDark()">🌙</span>
@@ -28,7 +26,8 @@
 
         <button class="login-btn">Login</button>
     </div>
-</header>
+</header> -->
+
 
 <div class="p-6 grid gap-6">
 
